# serverless-db

cli/: package-lock.json  package.json
cli/src/: index.ts
database/: CMakeLists.txt  main.cpp
database/src/db/: DataType.cpp  DataType.h  Table.cpp  Table.h
database/src/net/: Client.cpp  Client.h  Server.cpp  Server.h
prototype/: package-lock.json  package.json
prototype/src/: condition.ts  environment.ts  helpers.ts  index.ts  join.ts  lambda.ts  node.ts  socket.ts
prototype/src/services/: database.ts  lambda.ts  node.ts  socket.ts  storage.ts
prototype/src/workers/join/: join.ts  thread.ts
web-ui/: package-lock.json  package.json
web-ui/components/: Editor.tsx  Footer.tsx  Header.tsx  Table.tsx
web-ui/pages/: _app.tsx  index.tsx
web-ui/styles/: Editor.module.css  Header.module.css  Home.module.css  Table.module.css  globals.css
